clusters/mgmt-01/ops/tracing/ingress-otlp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otlp
  namespace: tracing
spec:
  ingressClassName: traefik
  rules:
    - host: otlp.mgmt.litomi.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opentelemetry-collector
                port:
                  number: 4318
